--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <tr>
             <td><img src="Profile.jpg" alt=""></td>
             <td><h1>Sahil Sharma</h1>
-                <p>Youtube Channel :- <a href="https://www.codingshuttle.com/" target="_blank">Coding Shuttle</a></p>
+                <p>Youtube Channel :- <a href="https://www.codingHub.com/" target="_blank">Coding hub</a></p>
                 <p> <i>Software Developer and an intern at MNC</i> </p>
                 <p>I ❤️ learning new things and to develop something for the society</p>
                 <a href="#contact" target="_blank">Connect with me</a>
